--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
         <div class="footer-content">
             <div class="footer-section">
                 <h3 class="footer-heading">Ama Music</h3>
-                <p>Your destination for the best music experience. Discover new songs and enjoy your favorites anytime, anywhere ~ subrat</p>
+                <p>Your destination for the best music experience. Discover new songs and enjoy your favorites anytime, anywhere.~subrat~</p>
                 <div class="social-icons">
                     <a href="#"><i class="fab fa-facebook"></i></a>
                     <a href="#"><i class="fab fa-twitter"></i></a>
